# product-eng-interview-schedule

./: .gitignore  README.md  start.sh
backend/: .env.example  availability_service.py  db.py  main.py  pyproject.toml  requirements.txt  rotation_generator.py  schedule_api.py  seed_data.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  EditModeContext.tsx  Layout.css  Layout.tsx  index.css  scheduleApi.ts
frontend/src/schedule/: AddGroupModal.tsx  EditableText.tsx  GroupBlock.tsx  PilotViewPanel.tsx  ScheduleEditor.tsx  ScheduleHome.tsx  activityFills.test.ts  activityFills.ts  model.test.ts  model.ts  schedule.css  transpose.test.ts  transpose.ts
