[project]
name = "schedule-manager-api"
version = "0.1.0"
description = "FastAPI backend for the Robot Lab Schedule Manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
